--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,18 @@ aio-pika = "^6.8.1"
 requests = "^2.27.1"
 mmf-meta = "^0.1.3"
 aiofile = "^3.7.4"
+pydantic = {extras = ["dotenv"], version = "^1.9.0"}
+xlrd = "^2.0.1"
+openpyxl = "^3.0.9"
+opencv-python = "^4.5.5"
+XlsxWriter = "^3.0.2"
+PyTurboJPEG = "^1.6.5"
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
+pytest-asyncio = "^0.17.2"
+aioboto3 = "^9.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
