--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ python-multipart = "^0.0.5"
 pytest = "^6.2.5"
 pytest-asyncio = "^0.17.2"
 aioboto3 = "^9.3.1"
+bump2version = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
