--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,15 +1,15 @@
 [bumpversion]
-current_version = 0.1.0
+current_version = 0.1.1b0
 parse = (?P<major>\d+)(\.(?P<minor>\d+))(\.(?P<patch>\d+))(?P<release>[bf]*)(?P<build>\d*)
 commit = True
 tag = True
-serialize =
+serialize = 
 	{major}.{minor}.{patch}{release}{build}
 	{major}.{minor}.{patch}
 
 [bumpversion:part:release]
 optional_value = f
-values =
+values = 
 	b
 	f
 
