--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,32 @@
 [tool.poetry]
 name = "mmf-serve"
-version = "0.1.6b4"
+version = "0.1.6"
 description = "Часть проекта MMF отвечающая за serving"
 authors = ["Викторов Андрей Германович <andvikt@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-fastapi = "^0.73.0"
-orjson = "^3.6.6"
-cryptography = "^36.0.1"
-pandas = "^1.4.0"
-aio-pika = "^6.8.1"
-requests = "^2.27.1"
-mmf-meta = "^0.1.3"
-aiofile = "^3.7.4"
+python = "^3.7"
+orjson = {version = "^3.2.0"}
+cryptography = {version = "^36.0.0"}
+requests = "^2.0.1"
+mmf-meta = {version = "^0.1.10", extras=["all"]}
+PyTurboJPEG = "^1.0.1"
+aiofile = "^3.0.0"
+python-multipart = {version = "^0.0.5", optional = true}
 pydantic = {extras = ["dotenv"], version = "^1.9.0"}
-xlrd = "^2.0.1"
-openpyxl = "^3.0.9"
-opencv-python = "^4.5.5"
-XlsxWriter = "^3.0.2"
-PyTurboJPEG = "^1.6.5"
-python-multipart = "^0.0.5"
+fastapi = {version = "^0.64.0", optional = true}
+aio-pika = {version = "^6.0.1", optional = true}
+
+[tool.poetry.extras]
+fastapi = ['fastapi', 'all']
+python-multipart = ['fastapi', 'all']
+aio-pika = ['rabbit', 'all']
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 pytest-asyncio = "^0.17.2"
 aioboto3 = "^9.3.1"
-bump2version = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
