--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mmf-serve"
-version = "0.1.7"
+version = "0.1.8"
 description = "Часть проекта MMF отвечающая за serving"
 authors = ["Викторов Андрей Германович <andvikt@gmail.com>"]
 readme = "README.md"
@@ -8,14 +8,14 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.7"
 orjson = "^3"
-cryptography = "^36"
+cryptography = ">=36"
 requests = "^2"
-mmf-meta = {version = "^0.1.11", extras=["all"]}
+mmf-meta = {version = "^0.1.13", extras=["all"]}
 PyTurboJPEG = "^1"
 aiofile = "^3"
 python-multipart = {version = "^0.0.5", optional = true}
-pydantic = {extras = ["dotenv"], version = "^1.9"}
-fastapi = {version = "^0.64", optional = true}
+pydantic = {extras = ["dotenv"], version = ">=1.9, <2.0"}
+fastapi = {version = ">= 0.64, < 1.0", optional = true}
 aio-pika = {version = "^6", optional = true}
 
 [tool.poetry.extras]
@@ -24,9 +24,9 @@ python-multipart = ['fastapi', 'all']
 aio-pika = ['rabbit', 'all']
 
 [tool.poetry.dev-dependencies]
-pytest = "^6"
-pytest-asyncio = "^0.17"
-aioboto3 = "^9"
+pytest = ">=6"
+pytest-asyncio = ">=0.17"
+aioboto3 = ">=9"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
